# 2PORTONT

./: README.md
bismarck_V3.5_R3935_20170106/: Makefile  Makefile.in  Makefile.name  rlz_ver  toolkit_for_verification.cfg  toolkit_path.in  toolkit_path.in.sample
bismarck_V3.5_R3935_20170106/release/: Makefile.conf  Makefile.info  conf.h  conf.tmp.h  conf.tmp.h.ext  encode_uboot.img  info.h  info.in  info2.in  plr.code  plr.img  plr.out  project_name  soc.h
bismarck_V3.5_R3935_20170106/uboot/: .boards.depend  Makefile  System.map  boards.cfg  build.sh  config.in  config.mk  mkuImage.sh  otto.makefile  project_name  rules.mk  toolkit_path.in  toolkit_path.in.sample  u-boot  u-boot.lds  u-boot.lzma  u-boot.map  u-boot.pimg  u-boot.srec  vendor_swp
bismarck_V3.5_R3935_20170106/util/: Makefile
sdk/: .config  .config.old  .oldconfig  LDLMakefile  LDLUFSMakefile  LUNA.README  Makefile  autoconf.h  config.arch  config.in  rootfs  toolkit_path.in
sdk/config/: .config.old  .config_initscript  Configure.help  autoconf.h  config.in  config_bb_ver.sh  config_default.xml  mkconfig  (+1 more)
sdk/user/cwmp-tr069/gsoaplib/soapcpp2/samples/: Makefile  Makefile.am  Makefile.c_rules  Makefile.cpp_rules  Makefile.defines  Makefile.in  README.txt  gpl.txt
sdk/user/cwmp-tr069/gsoaplib/soapcpp2/samples/ssl/: Makefile  Makefile.am  Makefile.in  README.txt  cacert.pem  cert.sh  client.pem  server.pem  ssl.h  sslclient.c  sslserver.c
sdk/user/fongw/fonsmcd/src/: Makefile.am  bootstrap  configure.in
sdk/user/fongw/fonsmcd/src/client/etc/: fonsmcd.conf  fonsmcd.conf.in  fonsmcd.init  public_fon_rsa_key_b.pem  public_sm_rsa_key.pem
sdk/user/fongw/fonsmcd/src/client/fonsmcd/: fonsmcd.c
sdk/user/fongw/fonsmcd/src/common/: hash.c  hash.h  poption.c  poption.h
sdk/user/fongw/fonsmcd/src/common/base/: base16.c  base16.h  base32.c  base32.h  base64.c  base64.h  base85.c  base85.h
sdk/user/fongw/fonsmcd/src/common/fonrsa/: Makefile  bigint.c  bigint.h  fonrsa.c  fonrsa.h  rmd160.h
sdk/user/fongw/fonsmcd/src/common/fonsm/: log.c  log.h  protocol.c  protocol.h  urandom.c  urandom.h
sdk/user/fongw/gengetopt-2.22.5/: ChangeLog  LICENSE  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac
sdk/user/fongw/gengetopt-2.22.5/doc/: Makefile.am  Makefile.in  README.example  cmdline1.c  cmdline1.h  cmdline1.h.texinfo  cmdline2.c  cmdline2.h  gengetopt.1  gengetopt.html  gengetopt.info  gengetopt.texinfo  help_modes.output.texinfo  help_output.texinfo  index.html  input.sed  main1.cc.texinfo  multiple_example.c  multiple_example.c.texinfo  sample1.ggo  sample1.ggo.texinfo  sample1.output.texinfo  sample1_2.output.texinfo  stamp-vti  test_conf_parser.c.texinfo  test_conf_parser_ov2.c.texinfo  test_modes_cmd.ggo.texinfo  test_multiple_parsers.c.texinfo  testdata
sdk/user/fongw/gengetopt-2.22.5/gl/: Makefile.am  Makefile.in
sdk/user/fongw/gengetopt-2.22.5/gl/m4/: gnulib-cache.m4  gnulib-comp.m4
sdk/user/fongw/gengetopt-2.22.5/src/: Makefile.am  Makefile.in  acceptedvalues.cpp  cmdline.c  cmdline.ggo  cmdline.h  gengetopt.cc  gm.cc  gm_utils.cpp  groups.h  parser.cc  parser.h  parser.yy  scanner.cc  scanner.ll
sdk/user/fongw/gengetopt-2.22.5/src/skels/: Makefile.in  c_source.h_skel  check_modes.h_skel  clear_arg.h_skel  clear_given.cc  clear_given.h  clear_given.h_skel  copyright.cc  copyright.h  copyright.h_skel  custom_getopt_gen.h_skel  dependant_option.h_skel  enum_decl.cc  enum_decl.h  enum_decl.h_skel  exit_failure.cc  exit_failure.h  exit_failure.h_skel  file_save.cc  file_save.h  file_save.h_skel  file_save_multiple.h_skel  free_list.cc  free_list.h  free_list.h_skel  free_multiple.h_skel  free_string.h_skel  generic_option.h  generic_option.h_skel  given_field.cc  given_field.h  given_field.h_skel  group_counter.h_skel  group_option.cc  group_option.h  group_option.h_skel  handle_help.cc  handle_help.h  handle_help.h_skel  handle_version.cc  (+20 more)
sdk/user/fongw/gengetopt-2.22.5/src/tests/: Makefile.am  Makefile.in  asserttestexit.h  test_specialchars.cc
sdk/user/fongw/gengetopt-2.22.5/tests/: Makefile.am  Makefile.in  canonize-names-cmd.c.test  canonize-names-cmd.ggo  canonize-names-cmd.h.test  canonize-names.c  cmdline.c.test  cmdline.ggo  cmdline.h.test  default_cmdline.c  default_values.c  default_values_cmd.c.test  default_values_cmd.ggo  default_values_cmd.h.test  more_than_once.c  more_than_once.sh.in  more_than_once_cmd.c.test  more_than_once_cmd.ggo  more_than_once_cmd.h.test  no_multi_strings.c  no_multi_strings_cmd.c.test  no_multi_strings_cmd.ggo  no_multi_strings_cmd.h.test  no_multi_types.c  no_multi_types_cmd.ggo  no_optgiven.c  no_optgiven.sh.in  no_optgiven2.c  no_optgiven_cmd.c.test  no_optgiven_cmd.ggo  no_optgiven_cmd.h.test  no_prog_name.c  no_strings.c  no_strings_cmd.c.test  no_strings_cmd.ggo  no_strings_cmd.h.test  no_unamed.c  no_unamed_cmd.c.test  no_unamed_cmd.ggonu  no_unamed_cmd.h.test  (+151 more)
sdk/user/fongw/gengetopt-2.22.5/tests/output_dir/: Makefile.am  Makefile.in
sdk/user/fongw/gengetopt-2.22.5/tests/output_header_dir/: Makefile.am  Makefile.in
sdk/user/updatedd-2.5/: AUTHORS  INSTALL  Makefile  Makefile.in  config.status  configure  configure.ac
sdk/user/updatedd-2.5/Documentation/: Makefile  Makefile.in  updatedd-pppd-rc
sdk/user/updatedd-2.5/debian/: changelog  conffiles  control  copyright  dirs  postinst  rules
sdk/user/updatedd-2.5/include/: base64encode.h  get_connection.h  ret_codes.h
sdk/user/updatedd-2.5/libexception_handle/: Makefile
sdk/user/updatedd-2.5/scripts/: ipserv.pl.in
sdk/user/updatedd-2.5/src/: Makefile  updatedd  updatedd.c
sdk/user/updatedd-2.5/src/plugins/: Makefile  changeip.c  changeip.h  dyndns.c  dyndns.h  eurodyndns.c  eurodyndns.h  gnudip.c  gnudip.h  hn.c  hn.h  noip.c  noip.h  ods.c  ods.h  oray.c  oray.h  ovh.c  ovh.h  regfish.c  regfish.h  tzo.c  tzo.h
sdk/user/updatedd-2.5/updatedd-wrapper/: Makefile  Makefile.in  create-config  create-config.in  updatedd-wrapper  updatedd-wrapper.1  updatedd-wrapper.conf  updatedd-wrapper.conf.5  updatedd-wrapper.in
(+18828 files in other folders)
