####### This is the input file for automake, which will generate Makefile.in ##########
## not a GNU package. You can remove this line, if
## you have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4

SUBDIRS = \
	quote quote2 quote3 quote4 quotex calc factory factorytest \
	dime mtom mtom-stream rss xml-rpc udp localtime listing \
	polytest magic lu ck googleapi varparam router events

